using UnityEngine;

public class AnimatorConst : MonoBehaviour
{
    public const string Speed = "Speed";
    public const string Attack = "Attack";
    public const string Died = "Died";
    public const string Eat = "Eat";
    public const string Run = "Run";
    public const string Dig = "Dig";
    public const string DigMultiplier = "DigMultiplier";
    public const string IsCollect = "IsCollect";
}
